--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,22 @@
 
-main{
+main {
   min-height: 80vh;
 }
 
-h3{
+h1 {
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+
+h2 {
+  font-size: 1.4rem;
   padding: 0.5rem 0;
 }
 
-.rating span{
+h3 {
+  padding: 0.5rem 0;
+}
+
+.rating span {
   margin: 0.1rem;
 }
